manifests/base/productcatalog/istio/destinationrule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: productcatalogservice
  namespace: productcatalogservice
spec:
  host: productcatalogservice.productcatalogservice.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
